test/types/seq/bradc/length.modify.good
length.modify.chpl:1: In function '__init_length':
length.modify.chpl:8: error: illegal assignment to sequence's length
